--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ripion portfollio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Jhankar Mahbub</span> World!</h1>
+            <h3>Programming Hero Course Teacher</h3>
+            <p>HTML is the foundation of all web pages. It defines the structure of a page, while CSS defines its style.
+                HTML and CSS are the beginning of everything you need to know to make your first web page! Learn both
+                and start creating amazing websites.</p>
+            <a class="link-button" href="https://www.linkedin.com/in/ripion-chakma-136777229/" target="_blank">HIRE
+                ME</a>
+        </div>
+        <div class="half-width">
+            <img src="jongkar.png">
+        </div>
+    </section>
 </body>
+
 </html>
