--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             <img src="jongkar.png">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png">
+        </div>
+        <div class="half-width">
+            <h1>Dream big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>Web Development is the practice of developing websites and web apps that live on the internet. Whether
+                you’re interested in front-end, back-end, or going full-stack, the content in our Web Development domain
+                will help you get there.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+
+        </div>
+    </section>
 </body>
 
 </html>
