--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Jhankar Mahbub</span> World!</h1>
@@ -28,7 +28,7 @@
             <img src="jongkar.png">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big  flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png">
         </div>
@@ -39,9 +39,30 @@
                 you’re interested in front-end, back-end, or going full-stack, the content in our Web Development domain
                 will help you get there.</p>
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
-
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="experience-item">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange-color">2024 - Present । Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Baby WEb Developer</h2>
+                <h3 class="orange-color">2022-2024 । Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>&copy Jhankar Mahbub 2022, a Programming Hero Initiative.</p>
+    </footer>
 </body>
 
 </html>
