--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 ME</a>
         </div>
         <div class="half-width">
-            <img src="jongkar.png">
+            <img src="images/jhankar.png">
         </div>
     </section>
     <section class="dream-big  flexible-container">
